--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,5 @@
-Instructions to run
-
-Navigate to folder /1-basic-react
-NPM install
-NPM run dev
-Navigate to localhost:8080
+## Instructions to run
+1. Navigate to folder */1-basic-react*
+2. *NPM install*
+3. *NPM run dev*
+4. Navigate to localhost:8080
